Fix mobile horizontal scroll

--- a/microservices/www2/src/components/Footer/Footer.scss
+++ b/microservices/www2/src/components/Footer/Footer.scss
@@ -1,5 +1,5 @@
 .footer {
-  width: 100%;
+  width: calc(100% - 32px);
   display: flex;
   flex-direction: column;
   margin-top: 120px;
